cluster/config/rook-ceph-cluster/ceph-dashboard-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ceph-dashboard
  namespace: rook-ceph
spec:
  hosts:
  - "ceph.kube.home"
  gateways:
  - istio-system/main-gateway
  http:
  - route:
    - destination:
        host: rook-ceph-mgr-dashboard
        port:
          number: 7000
